--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!doctype html>
 <html lang="eng">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" >
+    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
     <meta name="portfolio" content="My Personal Website">
     <title>Personal Website</title>
-    <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
+
 <body>
     <header>
-        <h1><b>Abhishant Tripathi</b></h1>
-        <p><b>Software Developer & Innovative Solutions</b></p>
+        <h1><img src="img/softeng.png"><b>Abhishant Tripathi</b><img src="img/softeng.png"></h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="work.html">Work</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -24,18 +25,72 @@
     <div class="container">
         <div id="about">
             <h1>ABOUT</h1>
-            <p><i>I am fluent in multiple programming languages, with proven abilities to provide solutions  to any clientele needs in all stages of development.</i></p>
+            <img src="img/IMG_1773_200x300.jpg">
+            <div id="secondnav">
                 <ul>
-                    <li>Self-Starter</li>
-                    <li>Motivated</li>
-                    <li>Team Player</li>
-                    <li>Positive Thinker</li>
-                    <li>Leader</li>
+                    <li><a href="">Email   ></a></li>
+                    <li><a href="">Hire   ></a></li>
                 </ul>
-        </div>
-            <div id="imag">
-                <img  src="img/img2.png">
             </div>
+        </div>
+        <div id="name11">
+            <p1><i><b>Abhishant Tripathi</b></i>
+            </p1><br><br>
+            <p3><i><b>Software Developer &amp; Innovative Solutions</b></i></p3><br><br>
+            <p2><i><b>An innovative software engineer based out of<br> New York. Previous work at tech giants &amp; start-ups <br> allowed me to adapt to different work settings.</b></i></p2>
+        </div>
+    </div>
+    <div class="container2">
+        <div id="columncontainer">
+            <div class="row" style="">
+                <div class="column" style="background-image:linear-gradient(#126396,#416170);">
+                    <div class="columnimg">
+                        <img id="loading" src="img/spinarroww.png">
+                    </div>
+                    <img src="img/icons8-html-5-52.png">
+                    <img src="img/icons8-css3-52.png">
+                    <img src="img/javascripticonn.png">
+                    <img src="img/icons8-angularjs-52.png">
+                    <p> Front-end development using HTML5, CC3, JavaScript and its framework/libraries to provide an elegant and interactive website for any clientele needs.</p>
+                    <a id="columnlink" href="">Learn More</a>
+                </div>
+                <div class="column" style="background-image:linear-gradient(#126396,#416170);">
+                    <div class="columnimg">
+                        <img id="loading" src="img/spinarroww.png">
+                    </div>
+                    <img src="img/pythonicon.png">
+                    <img src="img/icons8-java-52.png">
+                    <img src="img/rubyicon.png">
+                    <p> Back-end development via either Python, Ruby or Java to deliver a smooth functioning application to fit any client-side technology or needs.</p>
+                    <a id="columnlink" href="">Learn More</a>
+                </div>
+                <div class="column" style="background-image:linear-gradient(#126396,#416170);">
+                    <div class="columnimg">
+                        <img id="loading" src="img/spinarroww.png">
+                    </div>
+                    <img src="img/build.png">
+                    <img src="img/githubicon.png">
+                    <img src="img/write.png">
+                    <p> Previous work includes free-lancing for multiple clients across the globe. Software development for Google, Facebook, and various start-ups. </p>
+                    <a id="columnlink" href="">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container3">
+        <h2><img src="img/sourceicon.png"><b>Abhishant Tripathi</b></h2>
+        <div class="contact-icons">
+            <a href="facebook.com">
+                <img src="img/icons8-facebook-35.png"></a>
+            <a href="www.gmail.com">
+                <img src="img/icons8-gmail-35.png"></a>
+            <a href="www.linkedin.com">
+                <img src="img/icons8-linkedin-35.png"></a>
+            <a href="www.github.com">
+                <img src="img/icons8-github-35.png"></a>
+            <img src="img/sourceicon.png">
+        </div>
     </div>
 </body>
+
 </html>
