--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,76 @@
 <!doctype html>
-<html>
+<html lang="eng">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" >
+    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
     <meta name="portfolio" content="My Personal Website">
     <title>Personal Website</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
+
 <body>
     <header>
-        <h1>Abhishant Tripathi</h1>
-        <p>Software Developer & Innovative Solutions</p>
+        <h1><img src="img/softeng.png"><b>Abhishant Tripathi</b><img src="img/softeng.png"></h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Work</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    
-    
+    <div class="container34">
+        <h1 style="text-align: center; font-size:40px; color: white"> Lets Talk!</h1>
+        <p style="text-align: center; font-size:25px;"> Questions or Inquiries?<p>
+        <p style="font-size: 20px; text-align: center;"><img src="img/icons8-phonelink-ring-50.png"> 516-450-1024 <a style="text-decoration: none; color:white;"href="" ><img src="img/icons8-email-50.png"> Shant.Tripathi18@gmailcom <a style="text-decoration: none; color:white;"href="" ><img src="img/icons8-download-resume-50.png"> Download Resume</a></p>
+    </div>
+    <div class="container33">        
+        <div>
+            <a href="www.github.com"><img style="width: 500px; height: 300px; margin-left: 125px;"src="img/img2.png"></a>
+        </div>
+        <div style="float:left; margin-left: 100px;">
+        <form>
+            <h3 style="style=font-size:30px; text-align: center; margin-left:50px;"> Send me a message!</h3>
+            Name*
+            <br>
+            <input type="text" name="Name">
+            <br>
+            Email*
+            <br>
+            <input type="text" name="Email"> 
+            <br>
+            Subject*
+            <br>
+            <input type="text" name="Subject">
+        </form>
+        </div>
+        <div class="for">
+        <form>
+            Message*<br>
+           <input style="height:100px;"type="text" name="message">
+            <br>
+            <input style="background-color:#126396; color:white;"type="button" value="Send Message">
+        </form>
+        </div>
+        </div>
 
+    <div class="container3">
+        <h2><img src="img/sourceicon.png"><b>Abhishant Tripathi</b></h2>
+        <div class="contact-icons">
+            <a href="facebook.com">
+                <img src="img/icons8-facebook-35.png"></a>
+            <a href="www.gmail.com">
+                <img src="img/icons8-gmail-35.png"></a>
+            <a href="www.linkedin.com">
+                <img src="img/icons8-linkedin-35.png"></a>
+            <a href="www.github.com">
+                <img src="img/icons8-github-35.png"></a>
+            <img src="img/sourceicon.png">
+        </div>
+    </div>
 </body>
+
 </html>
