--- a/contact.html
+++ b/contact.html
@@ -24,39 +24,37 @@
     </header>
     <div class="container34">
         <h1 style="text-align: center; font-size:40px; color: white"> Lets Talk!</h1>
-        <p style="text-align: center; font-size:25px;"> Questions or Inquiries?<p>
-        <p style="font-size: 20px; text-align: center;"><img src="img/icons8-phonelink-ring-50.png"> 516-450-1024 <a style="text-decoration: none; color:white;"href="" ><img src="img/icons8-email-50.png"> Shant.Tripathi18@gmailcom <a style="text-decoration: none; color:white;"href="" ><img src="img/icons8-download-resume-50.png"> Download Resume</a></p>
+        <p style="text-align: center; font-size:25px;"> Questions or Inquiries?
+        </p>
+        <p style="font-size: 20px; text-align: center;"><img src="img/icons8-phonelink-ring-50.png"> 516-450-1024 <a style="text-decoration: none; color:white;" href=""><img src="img/icons8-email-50.png"> Shant.Tripathi18@gmailcom <a style="text-decoration: none; color:white;"href="" ><img src="img/icons8-download-resume-50.png"> Download Resume</a></a>
     </div>
-    <div class="container33">        
+    <div class="container33">
         <div>
             <a href="www.github.com"><img style="width: 500px; height: 300px; margin-left: 125px;"src="img/img2.png"></a>
         </div>
         <div style="float:left; margin-left: 100px;">
-        <form>
-            <h3 style="style=font-size:30px; text-align: center; margin-left:50px;"> Send me a message!</h3>
-            Name*
-            <br>
-            <input type="text" name="Name">
-            <br>
-            Email*
-            <br>
-            <input type="text" name="Email"> 
-            <br>
-            Subject*
-            <br>
-            <input type="text" name="Subject">
-        </form>
+            <form>
+                <h3 style="style=font-size:30px; text-align: center; margin-left:50px;"> Send me a message!</h3>
+                Name*
+                <br>
+                <input type="text" name="Name">
+                <br> Email*
+                <br>
+                <input type="text" name="Email">
+                <br> Subject*
+                <br>
+                <input type="text" name="Subject">
+            </form>
         </div>
         <div class="for">
-        <form>
-            Message*<br>
-           <input style="height:100px;"type="text" name="message">
-            <br>
-            <input style="background-color:#126396; color:white;"type="button" value="Send Message">
-        </form>
+            <form>
+                Message*<br>
+                <input style="height:100px;" type="text" name="message">
+                <br>
+                <input style="background-color:#126396; color:white;" type="button" value="Send Message">
+            </form>
         </div>
-        </div>
-
+    </div>
     <div class="container3">
         <h2><img src="img/sourceicon.png"><b>Abhishant Tripathi</b></h2>
         <div class="contact-icons">
