--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p1><i><b>Abhishant Tripathi</b></i>
             </p1><br><br>
             <p3><i><b>Software Developer &amp; Innovative Solutions</b></i></p3><br><br>
-            <p2><i><b>An innovative software engineer based out of<br> New York. Previous work at tech giants &amp; start-ups <br> allowed me to adapt to different work settings.</b></i></p2>
+            <p2><i><b>An innovative software engineer based out of<br> New York. Previous work at tech giants &amp; start-ups <br> allowed me to form my modus operandi .</b></i></p2>
         </div>
     </div>
     <div class="container2">
