--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <h1 style="text-align: center; font-size:40px; color: white"> Lets Talk!</h1>
         <p style="text-align: center; font-size:25px;"> Questions or Inquiries?
         </p>
-        <p style="font-size: 20px; text-align: center;"><img src="img/icons8-phonelink-ring-50.png"> 516-450-1024 <a style="text-decoration: none; color:white;" href=""><img src="img/icons8-email-50.png"> Shant.Tripathi18@gmailcom <a style="text-decoration: none; color:white;"href="" ><img src="img/icons8-download-resume-50.png"> Download Resume</a></a>
+        <p style="font-size: 20px; text-align: center;"><img src="img/icons8-phonelink-ring-50.png"> 516-450-1024 <a style="text-decoration: none; color:white;" href=""><img src="img/icons8-email-50.png"> Shant.Tripathi18&#64;gmail.com <a style="text-decoration: none; color:white;"href="" ><img src="img/icons8-download-resume-50.png"> Download Resume</a></a>
     </div>
     <div class="container33">
         <div>
